# mega-img-optimize

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
mega_img_optimize/: __init__.py  core.py
tests/: test_mega_img_optimize.py
